testdata/golden/sema/invalid/tagged_plain_union_forbidden.fmt
// scenario: plain untagged union is forbidden
type Error = int | string;
